--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,52 +1,103 @@
-#FAKEROOT { --settingsoffset: 3em; } /* change me to real root */
+// ========== Reference: 80-character line =====================================
+
+:root { --settingsoffset: 3em; }
 * { box-sizing: border-box; }
-body, p {
+body, p { // consider using Autoprefixer, e.g. might need for transform
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
 }
-#publayer, #wallet, #beacon, #pois, #itts, #settings {
-  position: fixed;
-  padding: 1em 2ch;
-}
-#publayer {
-  bottom: var(--settingsoffset); /* ontoggle changes to bottom */
-  left: 0;
-  top: 0; /* ontoggle changes to top */
-  right: 0;
-  width: 100%;
-  border: 1px solid blue;
-}
+p { padding: 1em 2ch; }
+#settings, #publayer, #beacon, #itts, #pois, #wallet { position: fixed; }
 #settings {
-  bottom: 0; /* ontoggle changes to bottom */
+  &.rad1 { top: 0; }
+  &.rad2 { bottom: 0; }
   left: 0;
   right: 0;
   width: 100%;
   height: var(--settingsoffset);
   border: 1px solid green;
+  * { display: inline-block; }
+  ul { margin: 0; padding: 0.5em; }
+  li { padding: 0.5em;
+    .bottom { transform: rotate(180deg); }
+    input[type=radio] { display: none; } // hides radio dots
+    input[type=radio]:not(:checked) ~ label { display: inline-block; }
+    input[type=radio]:checked ~ label { display: none; }
+  } // if selected, show icon of opposite option
 }
-#wallet, #beacon, #pois, #itts {
-  top: var(--settingsoffset); /* ontoggle changes to top: var(--settingsoffset) */
-  bottom: calc(2 * var(--settingsoffset)); /* ontoggle changes to bottom: var(--settingsoffset); */
+#publayer {
+  &.rad1 {
+    top: var(--settingsoffset);
+    bottom: 0;
+  }
+  &.rad2 {
+    top: 0;
+    bottom: var(--settingsoffset); 
+  }
+  left: 0;
+  right: 0;
+  width: 100%;
+  border: 1px solid blue;
+  * { text-align: center; }
+  nav {
+    height: var(--settingsoffset);
+    border: inherit;
+  }
+}
+#beacon, #itts, #pois, #wallet {
+  &.rad1 {
+    top: calc(2 * var(--settingsoffset));
+    bottom: 0;
+  }
+  &.rad2 {
+    top: var(--settingsoffset);
+    bottom: var(--settingsoffset);
+  }
   display: inline-block;
+  background-color: silver;
+  // * { display: inline-block; }
+  * { border: inherit; }
+  p { height: 100%; } // might not need this
+  .handle {
+    position: absolute;
+    background-color: inherit;
+    width: 100%;
+    text-align: center;
+  }
+}
+#beacon, #wallet {
+  left: 0;
+  .handle {
+    //float: right;
+    transform: rotate(-90deg);
+    transform-origin: top right;
+    right: 0;
+  }
+}
+#itts, #pois {
+  right: 0;
+  .handle {
+    transform: rotate(90deg);
+    transform-origin: top left;
+  }
+}
+#beacon, #itts {
+  border: 1px solid purple;
+}
+#pois, #wallet {
   border: 1px solid red;
 }
-#wallet, #beacon {
-  left: 0;
-}
-#pois, #itts {
-  right: 0;
-}
-#wallet {
-  width: 20ch;
-}
 #beacon {
-  width: 30ch;
-}
-#pois {
-  width: 25ch;
+  width: 40ch;
 }
 #itts {
+  width: 45ch;
+}
+#pois {
   width: 35ch;
+}
+#wallet {
+  width: 30ch;
 }
